--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -138,6 +138,9 @@ runs:
         
         set OCCT_SDK=%GITHUB_WORKSPACE%\occt-${{ env.OCCT }}-novtk
 
+        where python
+        python -c "import sys; print(sys.executable)"
+        echo "CONDA_PREFIX: %CONDA_PREFIX%"
         python -m build -n -w
         
         dir dist
