--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -84,16 +84,15 @@ runs:
 
     # - - -
 
-    - name: Install Windows Dependencies (x86_64)
-      if: runner.os == 'Windows'
-      shell: cmd
-      run: |
-        rem Install Windows Dependencies (x86_64)
-        call C:\Users\runneradmin\micromamba\condabin\micromamba.bat activate build-ocp
+    # - name: Install Windows Dependencies (x86_64)
+    #   if: runner.os == 'Windows'
+    #   shell: cmd
+    #   run: |
+    #     rem Install Windows Dependencies (x86_64)
 
-        micromamba install vs2019_win-64 -c conda-forge
-        %CONDA_PREFIX%\pip install delvewheel build wheel
-        micromamba list
+    #     micromamba install -y build vs2019_win-64 -c conda-forge
+    #     micromamba info
+    #     micromamba list
 
     # - - -
     
@@ -214,7 +213,8 @@ runs:
         # Repair Windows Wheel (x86_64)
         set -e
         set -o pipefail
-        
+
+        micromamba install -y delvewheel wheel        
         cd ocp-addons
         VERSION=$(awk -F'"' '/^__version__/ {print $2}' setup.py)
 
