--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -86,7 +86,7 @@ runs:
 
     # - name: Install Windows Dependencies (x86_64)
     #   if: runner.os == 'Windows'
-    #   shell: cmd
+    #   shell: cmd.exe
     #   run: |
     #     rem Install Windows Dependencies (x86_64)
         
@@ -125,10 +125,13 @@ runs:
 
     - name: Clone ocp-addons and build wheel 
       if: runner.os == 'Windows'
-      shell: cmd
+      shell: cmd.exe
+      env:
+        OCCT_SDK: ${{ github.workspace }}\occt-${{ env.OCCT }}-novtk      
       run: |
         rem Clone ocp-addons and build wheel 
         
+        set VSCMD_DEBUG=2
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
 
         git clone https://github.com/jdegenstein/ocp-addons.git
@@ -136,8 +139,6 @@ runs:
         cd ocp-addons
         git switch ocp-build-system
         
-        echo GITHUB_WORKSPACE: %GITHUB_WORKSPACE%
-        set OCCT_SDK=%GITHUB_WORKSPACE%\occt-${{ env.OCCT }}-novtk
         echo START: %OCCT_SDK%
         micromamba run -n build-ocp python -m build -n -w
         
