--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -132,7 +132,9 @@ runs:
         rem Clone ocp-addons and build wheel 
         
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-
+        set CC=cl.exe
+        set CXX=cl.exe
+        
         git clone https://github.com/jdegenstein/ocp-addons.git
         
         cd ocp-addons
