--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -134,12 +134,12 @@ runs:
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         set CC=cl.exe
         set CXX=cl.exe
-        
+
         git clone https://github.com/jdegenstein/ocp-addons.git
         
         cd ocp-addons
         git switch ocp-build-system
-        
+        cat setup.py
         echo START: %OCCT_SDK%
         micromamba run -n build-ocp python -m build -n -w
         
