use all OS again

--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -14,7 +14,6 @@ env:
 
 jobs:
     addons-ubuntu:
-        if: false
         name: Build OCP addons for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
         runs-on: ubuntu-latest
         container:
@@ -45,17 +44,17 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: ["macos-13", "macos-15", "windows-2022"]
-                os: [ "windows-2022"]
+                os: ["macos-13", "macos-15", "windows-2022"]
+                # os: [ "windows-2022"]
                 # python-version: ["3.10", "3.11", "3.12", "3.13"]
                 python-version: ["3.13"]
                 include:
-                    # - os: "macos-15"
-                    #   sed-i: "gsed -i"
-                    #   shells: "bash"
-                    # - os: "macos-13"
-                    #   sed-i: "gsed -i"
-                    #   shells: "bash"
+                    - os: "macos-15"
+                      sed-i: "gsed -i"
+                      shells: "bash"
+                    - os: "macos-13"
+                      sed-i: "gsed -i"
+                      shells: "bash"
                     - os: "windows-2022"
                       sed-i: "sed -i"
                       shells: "bash cmd.exe"
