--- a/environment-ocpaddons.yml
+++ b/environment-ocpaddons.yml
@@ -2,7 +2,7 @@ name: build-ocp
 channels:
   - conda-forge
 dependencies:
-  - python=3.13
+  - python=__PY_VERSION__
   - setuptools>=75
   - pybind11=2.13.*
   - pybind11-stubgen
@@ -10,4 +10,5 @@ dependencies:
   - pip: 
     - build
     - wheel
+    - __WHEEL_REPAIR__
   
