--- a/.github/actions/test-ocp-addons/action.yml
+++ b/.github/actions/test-ocp-addons/action.yml
@@ -7,9 +7,6 @@ inputs:
   python-version:
     description: "Python version to use for the build"
     required: true
-  sed-i:
-    description: "Sed in-place command for the OS"
-    required: true
   github-token:
     required: true
     description: 'GitHub Token'
@@ -23,13 +20,10 @@ runs:
 
     - name: (Linux) Install ca-certificates
       if: runner.os == 'Linux'
-      shell: bash -l {0}
+      shell: bash -leo pipefail {0}
       run: |
         # (Linux) Install ca-certificates
-        set -e
-        set -u
-        set -o pipefail
-
+        
         sudo apt-get update -qq  
         sudo DEBIAN_FRONTEND=noninteractive apt-get install -qq ca-certificates > /dev/null 2>&1
     
@@ -37,24 +31,22 @@ runs:
 
     - name: Install MacOS Dependencies (x86_64 / arm64)
       if: runner.os == 'macOS'
-      shell: bash -l {0}
+      shell: bash -leo pipefail {0}
       run: |
         # Install MacOS Dependencies (x86_64 / arm64)
-        set -e
-        set -o pipefail
         
         brew install gsed
-
+        # ensure gnu sed is in PATH before system (BSD) sed
+        echo "$(brew --prefix gnu-sed)/libexec/gnubin" >> $GITHUB_PATH
+        
     # - - -
     
     - name: Prepare environment.yml
-      shell: bash -l {0}
+      shell: bash -leo pipefail {0}
       run: |
         # Install Linux Dependencies (x86_64)
-        set -e
-        set -o pipefail
-
-        ${{ inputs.sed-i }} 's/__PY_VERSION__/${{ inputs.python-version }}/' environment-ocpaddons.yml
+        
+        sed -i 's/__PY_VERSION__/${{ inputs.python-version }}/' environment-ocpaddons.yml
 
         cat environment-ocpaddons.yml
 
@@ -90,11 +82,9 @@ runs:
     # - - -
 
     - name: Test Repaired Wheel and Run Package Tests
-      shell: bash -l {0}
+      shell: bash -leo pipefail {0}
       run: |
         # Test Repaired Wheel and Run Package Tests
-        set -e
-        set -o pipefail
         
         pip install cadquery_ocp-*.whl
         python -c "import OCP; print('Success: OCP', OCP.__version__)"
@@ -104,14 +94,14 @@ runs:
 
         git clone https://github.com/snoyer/ocpsvg.git
         cd ocpsvg
-        ${{ inputs.sed-i }} 's/cadquery-ocp >= 7\.8\.1, < 7\.9\.0/cadquery-ocp >= 7.8, < 8.0/g' pyproject.toml
+        sed -i 's/cadquery-ocp >= 7\.8\.1, < 7\.9\.0/cadquery-ocp >= 7.8, < 8.0/g' pyproject.toml
         pip install .
         cd ..
 
         git clone https://github.com/gumyr/build123d.git
         cd build123d 
         git checkout 1af4b0c3129dd152a1c9cb01400c1e648a5de8e2  # pre Gordon face to avoid 7.9. issues
-        ${{ inputs.sed-i }} 's/cadquery-ocp >= 7\.8, < 7\.9/cadquery-ocp >= 7.8, < 8.0/g' pyproject.toml
+        sed -i 's/cadquery-ocp >= 7\.8, < 7\.9/cadquery-ocp >= 7.8, < 8.0/g' pyproject.toml
         pip install .
         cd ..
 
