--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -43,10 +43,6 @@ runs:
         # ensure gnu sed is in PATH before system (BSD) sed
         echo "$(brew --prefix gnu-sed)/libexec/gnubin" >> $GITHUB_PATH
 
-        echo $PATH
-        ls "$(brew --prefix gnu-sed)/libexec/gnubin"
-        command -v sed
-
     # - - -
     
     - name: Prepare environment.yml
@@ -54,7 +50,15 @@ runs:
       run: |
         # Install Linux Dependencies (x86_64)
 
+        echo "1 ======"
+        echo $GITHUB_PATH
+        echo "2 ======"
         echo $PATH
+        echo "3 ======"
+        ls "$(brew --prefix gnu-sed)/libexec/gnubin"
+        echo "4 ======"
+        command -v sed
+
         sed -i 's/__PY_VERSION__/${{ inputs.python-version }}/' environment-ocpaddons.yml
 
         cat environment-ocpaddons.yml
