--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -43,7 +43,7 @@ runs:
         # ensure gnu sed is in PATH before system (BSD) sed
         cat <<EOF > $GITHUB_PATH
         $GITHUB_PATH
-        $(brew --prefix gnu-sed)/libexec/gnubin"
+        $(brew --prefix gnu-sed)/libexec/gnubin
         EOF
 
     # - - -
